examples/chill/testcases/RIGHTANSWERS/regression1.py.stderr
  File "smooth_fused_64.script", line 1
    source:smooth_fused_64.c
          ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "regression1.py", line 84, in <module>
    statstruct = os.stat( dest )
OSError: [Errno 2] No such file or directory: 'smooth_fused_64modified.c'
